# hyperopt-llm-project

./: .gitattributes  .gitignore  Dockerfile  README.md  config_file.py  docker-compose.yml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
hyperopt_llm_project.egg-info/: SOURCES.txt  requires.txt
mlruns/113837886381510581/: meta.yaml
mlruns/113837886381510581/1f17774e66cd4f60ab6f198ae46d191d/: meta.yaml
mlruns/468470186977996171/: meta.yaml
mlruns/468470186977996171/3c0ba3d47b4b43368ee2bc48cb281a04/: meta.yaml
mlruns/468470186977996171/4412576c4ee84bfca0b3ac39a236a1a5/: meta.yaml
mlruns/468470186977996171/529bf0c1593d4bd7ab102d150bfd427e/: meta.yaml
mlruns/988097034159719140/: meta.yaml
notebooks/: 4.2.0  Forecasting_pipeline_test.ipynb  Preprocessing.ipynb  bayesian_optimization_demo.ipynb  clean_data.ipynb  data_Visualization.ipynb  meta_LLM_Opt.ipynb  mlflow.db  spli_data.ipynb  split_data.ipynb
results/data_results/: bi-lstm_history.csv  bi-lstm_metrics.json  bi-lstm_predictions.csv
src/app/: streamlit_app.py
src/config/: credentials.yaml
src/data/: data_cleaning.py  data_preprocessing.py  utils_data.py
src/hyperopt_llm_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/meta_HPO/: LLM_Load.py  llm_prompt.py  meta_knowledge_building.py  meta_llm_tuning.py
src/models/: base_model.py  evaluation.py  plot_results.py  train.py
src/pipelines/: forecasting_pipeline.py  full_pipeline.py
src/tuning/: bo_tuning.py  llm_tuning.py  meta_llm_tuning.py  mlflow_config.yaml  mlflow_logger.py
tests/: test_config.py  test_meta_hpo.py  test_mlflow_logger.py  test_models.py  test_models_training.py  test_pipelines.py  test_tuning.py
(+89 files in other folders)
